plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = "25.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
}

application {
    mainClass = "org.baseplayer.MainApp"
    
    // Add Ikonli modules to the module path
    applicationDefaultJvmArgs = [
        '--add-opens', 'javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
        '--add-opens', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
        '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED'
    ]
}
shadowJar {
    mergeServiceFiles()
    zip64 true
    configurations = [project.configurations.runtimeClasspath]
    version = '1.0.0'
    manifest {
        attributes(
            'Main-Class': 'org.baseplayer.MainApp'
        )
    }
}
sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml", "**/*.css", "**/*.png", "**/*.jpg"]
        }
    }
}
jar {
    manifest {
        attributes 'Main-Class': 'org.baseplayer.MainApp'
    }
}
dependencies {
    implementation(
        [group: 'com.google.code.gson', name: 'gson', version: '2.11.0'],
        [group: 'com.github.samtools', name: 'htsjdk', version: '4.1.3']
    )
    
    // Ikonli icon font library for JavaFX
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1'
}
